# jina-judge

./: .gitignore  README.md  pyproject.toml  run.sh
example/: README.md  config.yaml
example/dataset/: aya-23-8b.jsonl  gemma-2-9b-it.jsonl
jina_judge/: config.py  dataloader.py  main.py  model.py  train_utils.py
scripts/: run.sh
